# cypridict

./: .gitignore  Makefile  README.MD  README.md  benchmark_heapq.py  benchmark_maxheap.py  benchmark_pridict.py  cymaxheap.c  cymaxheap.pxd  cymaxheap.pyx  cypridict.c  cypridict.pxd  cypridict.pyx  install.sh  maxheap.c  maxheap.h  pyproject.toml  setup.py  test_array  test_heap  test_heap.c  test_maxheap.py  test_pridict.py
benchmark/: benchmark_pridict.py
pridict/: __init__.py  cypridict.c  cypridict.pxd  cypridict.pyi  cypridict.pyx  maxheap.c  maxheap.h
src/pridict/: pridict.pyi
tests/: test_pridict.py
